--- a/GameStore.Frontend/Components/Pages/EditGame.razor
+++ b/GameStore.Frontend/Components/Pages/EditGame.razor
@@ -1,11 +1,16 @@
 @page "/editgame"
+@page "/editgame/{id:int}"
+@rendermode InteractiveServer
+
 @inject NavigationManager navigationManager
+@inject GamesClient GamesClient
+@inject GenresClient GenresClient
 
-<PageTitle>New Game</PageTitle>
+<PageTitle>@title</PageTitle>
 
-<h3>New Game</h3>
+<h3>@title</h3>
 
-@if (genres is null)
+@if (genres is null || game is null)
 {
     <p><em>Loading...</em></p>
 }
@@ -13,10 +18,13 @@ else
 {
     <div class="row">
         <div class="col-md-4">
-            <EditForm Model="@game" FormName="editGame" OnSubmit="HandleSubmit">
+            <EditForm Model="@game" FormName="editGame" OnValidSubmit="HandleSubmitAsync">
+                <DataAnnotationsValidator/>
+                <ValidationSummary/>
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <InputText id="name" @bind-Value="game.Name" class="form-control"/>
+                    <ValidationMessage For="() => game.Name"/>
                 </div>
                 <div class="mb-3">
                     <label for="genre" class="form-label">Genre</label>
@@ -27,10 +35,12 @@ else
                             <option value="@genre.Id">@genre.Name</option>
                         }
                     </InputSelect>
+                    <ValidationMessage For="() => game.GenreId"/>
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label">Price</label>
                     <InputNumber id="price" @bind-Value="game.Price" class="form-control"/>
+                    <ValidationMessage For="() => game.Price"/>
                 </div>
                 <div class="mb-3">
                     <label for="releaseDate" class="form-label">Release Date</label>
@@ -43,31 +53,58 @@ else
     </div>
 }
 
-
-
 @code {
-
-    private GenresClient genresClient = new();
-
-    private GamesClient gamesClient = new();
-
+    
+    [Parameter]
+    public int? Id { get; set; }
     private Genre[]? genres;
+    private string title = string.Empty;
 
     [SupplyParameterFromForm]
-    private GameDetails game { get; set; } = new()
-    {
-        Name = string.Empty,
-        ReleaseDate = DateOnly.FromDateTime(DateTime.UtcNow)
-    };
+    private GameDetails? game { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnParametersSetAsync()
     {
-        genres = genresClient.GetGenres();
+        if (game is not null)
+        {
+            return;
+        }
+        if (Id is not null)
+        {
+            game = await GamesClient.GetGameAsync(Id.Value);
+            title = $"Edit {game.Name}";
+        }
+        else
+        {
+            title = "New Game";
+            game = new()
+            {
+                Name = string.Empty,
+                ReleaseDate = DateOnly.FromDateTime(DateTime.UtcNow)
+            };
+        }
+
     }
 
-    private void HandleSubmit()
+    protected override async Task OnInitializedAsync()
     {
-        gamesClient.AddGame(game);
+        genres = await GenresClient.GetGenresAsync();
+    }
+
+    private async Task HandleSubmitAsync()
+    {
+        ArgumentNullException.ThrowIfNull(game);
+
+        if (Id is null)
+        {
+            await GamesClient.AddGameAsyc(game);
+        }
+        else
+        {
+            game.Id = Id.Value;
+            await GamesClient.UpdateGameAsync(game);
+        }
+        
         navigationManager.NavigateTo("/");
     }
 
