--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@inject GamesClient GamesClient
+@attribute [StreamRendering]
 
 <PageTitle>Game Catalog</PageTitle>
 
@@ -28,7 +30,17 @@
                     <td>@game.Genre</td>
                     <td class="text-end">@game.Price.ToString("c2")</td>
                     <td>@game.ReleaseDate</td>
-                    <td></td>
+                    <td>
+                        <div class="d-flex">
+                            <a class="btn btn-primary me-2" role="button" href="@GameUrl(game.Id)">
+                                <i class="bi bi-pencil"></i>
+                            </a>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="@GetDeleteModalId(game)">
+                                <i class="bi bi-x-lg"></i>
+                            </button>
+                        </div>
+                        <DeleteGame Game="@game"/>
+                    </td>
                 </tr>
             }
         </tbody>
@@ -37,12 +49,19 @@
 
 
 @code {
-   private GamesClient gamesClient = new();
+
    private GameSummary[]? games;
 
-   protected override void OnInitialized()
+   protected override async Task OnInitializedAsync()
    {
-        games = gamesClient.GetGames();
+        games = await GamesClient.GetGamesAsync();
+   }
+
+   private static string GameUrl(int id) => $"/editgame/{id}";
+
+   private string GetDeleteModalId(GameSummary gameSummary)
+   {
+        return $"#{DeleteGame.GetModalId(gameSummary)}";
    }
 
 }
